# LanceCreator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LanceCreator.sln  README.md  clan.json  clan_premium.json  is.json  mixed.json  old.json  old.txt
LanceCreator/: FileParser.cpp  FileParser.h  Force.cpp  Force.h  LanceCreator.cpp  LanceCreator.h  LanceCreator.vcxproj  LanceCreator.vcxproj.filters  Mech.cpp  Mech.h  Model.cpp  Model.h  ModelForce.cpp  ModelForce.h  ReadMe.txt  lances.csv  stdafx.cpp  stdafx.h
mechlists/: clan.json  clan_ba.json  clan_ci.json  clan_fccw.json  clan_premium.json  is.json  is_ba.json  is_ci.json  is_fccw.json  is_premium.json  is_vee.json
src/: main.rs
src/model/: mod.rs
unitlists/: mechs.json
