[package]
name = "lance_creator"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = "0.29.0"
rstest = "0.23.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sorted-vec = "0.8.5"
