[package]
name = "lance_creator"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
itertools = "0.14.0"
rand = "0.9.0"
rstest = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sorted-vec = "0.8.6"
spinners = "4.1.1"
